replace links to libs to use import maps

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             "vue-router": "/ui/lib/vue-router.min.mjs",
             "@servicestack/client": "/ui/lib/servicestack-client.min.mjs",
             "@servicestack/vue": "/ui/lib/servicestack-vue.min.mjs",
-            "highlight.mjs": "/ui/lib/highlight.min.mjs"
+            "idb": "/ui/lib/idb.min.mjs",
+            "marked": "/ui/lib/marked.min.mjs",
+            "highlight.js": "/ui/lib/highlight.min.mjs"
         }
     }
     </script>    
