move client + server to new modular system

--- a/llms/index.html
+++ b/llms/index.html
@@ -35,7 +35,8 @@
             "marked": "/ui/lib/marked.min.mjs",
             "highlight.js": "/ui/lib/highlight.min.mjs",
             "chart.js": "/ui/lib/chart.js",
-            "color.js": "/ui/lib/color.js"
+            "color.js": "/ui/lib/color.js",
+            "ctx.mjs": "/ui/ctx.mjs"
         }
     }
 </script>
