--- a/llms/index.html
+++ b/llms/index.html
@@ -27,7 +27,8 @@
 <script type="importmap">
     {
         "imports": {
-            "vue": "/ui/lib/vue.min.mjs",
+            "vue-prod": "/ui/lib/vue.min.mjs",
+            "vue": "/ui/lib/vue.mjs",
             "vue-router": "/ui/lib/vue-router.min.mjs",
             "@servicestack/client": "/ui/lib/servicestack-client.mjs",
             "@servicestack/vue": "/ui/lib/servicestack-vue.mjs",
